# workshops

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONVENTIONS.md  Dungeon_Adventure.ipynb  NOTES.md  README.md  SECURITY.md
.devcontainer/learning/: devcontainer.json
.github/workflows/: pages.yaml  slides.yaml
adventure/: Dungeon_Adventure.ipynb  NOTES.md  README.md
artifacts/: Caddyfile  NOTES.md  README.md  TODO.md  main.py  pendulum-1.html  pendulum-2.html  requirements.in  requirements.txt  snake.html  tetris.html
bricks/: NOTES.md  README.md  TODO.md  pyproject.toml
bricks/slides/: package-lock.json  package.json  slides.md
cameo/: .gitignore  CONTEXT.md  INSTALL.md  NOTES.md  README.md  package-lock.json  package.json
cameo/public/: test-generate.html
cameo/src/app/: globals.css  layout.tsx  page.tsx
cameo/src/components/: FaceCapture.tsx  VoiceRecording.tsx
cameo/src/hooks/: useFaceDetection.ts  useVoiceRecording.ts
cameo/src/lib/: mediapipe.ts  utils.ts  video-pipeline.ts
cameo/test-data/: .gitkeep
chess/: DESIGN.md  NOTES.md  README.md  build_database.py  chess_analyzer.py  chess_companion_standalone.py  chess_description_generator.py  chess_vision_test.py  create_bigquery_db.sh  create_embeddings.py  explore_bigquery.py  fast_text_scan.py  live_chess_companion.py  parallel_bigquery.py  parse_pgn.py  pgn_parser.py  pgn_to_bigquery_native.py  pgn_to_bigquery_streaming.py  position_features.py  pyproject.toml  roboflow.py  scan_player_games.py  scenedetection.py  setup_hdmi_loopback.sh  split_pgn.py  stockfish_pool.py  test_audio_stream.py  test_bigquery_data.py  test_roboflow_segmentation.py  test_scene_detection.py  test_square_classification.py  tv_controller.py  vector_search.py
chess/notes/: NOTES-2025-q3.md
cost/: README.md  TODO.md
cost/slides/: package-lock.json  package.json  slides.md
cost/slides/components/: Counter.vue
cost/slides/snippets/: external.ts
doodles/: NOTES.md  README.md  TODO.md  index.html
factuality/: README.md  TODO.md  main.py  requirements.in  requirements.txt
factuality/slides/: package-lock.json  package.json  slides.md
factuality/slides/public/: factuality.dot
factuality/slides/styles/: index.css
fantasy/agents/: pyproject.toml
fantasy/agents/src/agents/: draft.py
fantasy/agents/src/agents/recommendation_agent/: agent.py
fantasy/agents/tests/: test_autopick_agent.py  test_draft.py  test_fantasy.py  test_recommendation_agent.py  test_sleeper_poller.py
fantasy/commentary-extension/: offscreen.js  pcm-player-processor.js  pcm-recorder-processor.js  popup.html  popup.js
fantasy/fantasy/: README.md  compose.yaml
fantasy/fantasy/agents/: Dockerfile
fantasy/fantasy/commentary-extension/: background.js  manifest.json  offscreen.html  permissions.html  permissions.js  popup.css
fantasy/fantasy/common/: pyproject.toml
fantasy/fantasy/common/src/common/: utils.py
fantasy/fantasy/common/tests/: test_utils.py
fantasy/fantasy/db/: fantasy_ingestion.sqlite
fantasy/fantasy/ingestion/: Dockerfile  pyproject.toml
fantasy/fantasy/ingestion/src/ingestion/: ingestion_job.py
fantasy/fantasy/ingestion/tests/: test_ingestion_job.py
games/: README.md  TODO.md  ares.py  athena.py  main.py  play.py  requirements.in  requirements.txt  run.sh
games/slides/: package-lock.json  package.json  slides.md
games/slides/public/: stack.css  stack.dot  wins.css
history/: NOTES.md  README.md  graph.py  index.html  requirements.txt
history/slides/: index.html  package-lock.json  slides.md
kundali/: README.md  TODO.md  main.py  requirements.in  requirements.txt
learning/: .dockerignore  CONTEXT.md  DEPLOY.md  DESIGN.md  Dockerfile  LISP_WORKSPACE.md  NOTES.md  README.md  components.json  eslint.config.mjs  merge_pcg.py  next.config.ts  package-lock.json  package.json  paip-chapter-1-pcg-pass2-sample.json  pcg-visualizer.html  tsconfig.json
learning/app/: globals.css  layout.tsx  page.tsx
learning/lib/: gemini-utils.ts
learning/paip-chapter-1/: chunks.json  concept-graph.json
learning/pytudes/: concept-graph.json  tsp-chunks.json  tsp.md
learning/scripts/: chunk-paip.ts  deploy.sh  embed-chunks.ts  test-docker.sh
learning/types/: browser-globals.d.ts  cytoscape-plugins.d.ts
oxford/slides/: index.html  package-lock.json  package.json  slides.md  style.css
podcast/: NOTES.md  README.md  TODO.md  main.py  requirements.in  requirements.txt  run.sh
prisoner/: NOTES.md  README.md  prisoner.py  pyproject.toml  transcript.md
recap/: README.md
recap/slides/: netlify.toml  package-lock.json  package.json  slides.md
roast/: NOTES.md  README.md  app.py  main.py  pyproject.toml  roast.py
scripts/: NOTES.md  README.md  run.sh
smash/: Dockerfile  NOTES.md  README.md  TODO.md  design.dot  entrypoint.sh  image.py  pyproject.toml  rebuild_and_run.sh  retroarch.py  run.sh  run_docker.sh  virtual_controller.py
smash/slides/: package-lock.json  package.json  slides.md  style.css
smash/slides/components/: Counter.vue
smash/slides/public/: reasoning-loop.dot
startupcon/slides/: package.json  pnpm-lock.yaml  slides.md
tedx/slides/: package-lock.json  package.json  slides.md
tools/: README.md  generate-all-docs.sh  generate-docs.py  generate-pr-description-ai.py  generate-pr-description.sh  pyproject.toml
tv/: DESIGN.md  NOTES.md  README.md  chrome.py  pyproject.toml  test-downmixing.sh  test_adb_search.py  test_chromecast_discovery.py  tv_companion.py  tv_companion_with_transcription.py  voice_chat.py
tv/film_context/: __init__.py  add_screenplay.py  create_embeddings.py  data_gatherer.py  tmdb_client.py  wikipedia_client.py
utils/: NOTES.md  README.md  model.py  news.py  params_default.py  parsing.py  parsing_test.py
waker/: DESIGN.md  FRICTION-LOG.md  NOTES.md  README.md  TODO.md  controller_daemon.py  create_embeddings.py  install_controller_permissions.sh  mvp_chat.py  pyproject.toml  run_with_controller.sh  voice_chat.py
waker/slides/: package-lock.json  package.json  slides.md
wearable/: README.md  TODO.md  main.py  requirements.in  requirements.txt  run.sh
(+69 files in other folders)
