[tool.poetry]
name = "prisoner"
version = "0.1.0"
description = ""
authors = ["Peter Danenberg"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
litellm = "*"
crewai = { git = "https://github.com/crewAIInc/crewAI" }
langchain = "^0.3.18"
streamlit = "^1.42.0"
absl-py = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
