[tool.poetry]
name = "llm-tv-companion"
version = "0.1.0"
description = "LLM-powered TV companion for movies and shows"
authors = ["Your Name"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pipewire_python = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
