# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "llm-windwaker"
version = "0.1.0"
description = "LLM-powered co-operative gameplay for Zelda Wind Waker"
authors = ["Your Name"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyaudio = "*"
google-genai = "*"
mss = "*"
Pillow = "*"
numpy = "*"
mem0ai = "^0.1.114"
evdev = "*"
python-uinput = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
