[project]
name = "common"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.9,<=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "aiohttp (>=3.13.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[tool.poetry]
packages = [{include = "common", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
