[project]
name = "ingestion"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "google-genai (>=1.38.0,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "aiohttp (>=3.13.0,<4.0.0)",
]

[tool.poetry]
packages = [{include = "ingestion", from = "src"}]

[tool.poetry.group.local.dependencies]
common = { path = "../common", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
